<resources>
    <string name="app_name">RappiChallenge</string>
    <string name="author_splash">By Juan Martin Leiva</string>
    <string name="lan_english">English</string>
    <string name="search_noConnectionTextTitle">It seems there\'s no internet!</string>
    <string name="search_noConnectionTextBody">Check your internet connection to keep browsing.</string>
    <string name="retry">Retry</string>
    <string name="no_vote">NR</string>
    <string name="search_screen_title">RappiChallenge</string>
    <string name="sorting_popularity">Popularity</string>
    <string name="sorting_date">Upcoming</string>
    <string name="sorting_rating">Top rated</string>
    <string name="placeholder_description">As the Avengers and their allies have continued to protect the world from threats too large for any one hero to handle, a new danger has emerged from the cosmic shadows: Thanos. A despot of intergalactic infamy, his goal is to collect all six Infinity Stones, artifacts of unimaginable power, and use them to inflict his twisted will on all of reality. Everything the Avengers have fought for has led up to this moment - the fate of Earth and existence itself has never been more uncertain.</string>
    <string name="placeholder_date">December 14, 2018</string>
    <string name="placeholder_title">Avengers, Infinity War</string>
    <string name="genres">Genres</string>
    <string name="placeholder_genre">Action</string>
    <string name="videos">Trailers</string>
    <string name="error_dialog_title">Warning!</string>
    <string name="not_found_dialog_body">The content you\'re looking for has not been found</string>
    <string name="sort_by">Sort by:</string>
    <string name="vote_hyphenation">%</string>
    <string name="menu_search">Search</string>
    <string name="search_hint">Search title name</string>
</resources>
