<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:animateLayoutChanges="true">

    <include
        android:id="@+id/include_no_connection"
        layout="@layout/no_connection_layout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="gone"/>

    <ProgressBar
        android:id="@+id/pb_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"/>

    <ScrollView
        android:id="@+id/sv_contents"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_backdrop"
                android:layout_width="0dp"
                android:layout_height="260dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@drawable/ic_photo_96dp"/>


            <ImageView
                android:id="@+id/iv_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_arrow_back_white_24px"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"/>

            <View
                android:layout_width="0dp"
                android:layout_height="120dp"
                app:layout_constraintStart_toStartOf="@id/iv_backdrop"
                app:layout_constraintEnd_toEndOf="@id/iv_backdrop"
                app:layout_constraintBottom_toBottomOf="@id/iv_backdrop"
                android:background="@drawable/backdrop_gradient"/>

            <include layout="@layout/vote_layout"
                     android:id="@+id/fl_vote_container"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     app:layout_constraintBottom_toBottomOf="@id/iv_backdrop"
                     app:layout_constraintEnd_toEndOf="parent"
                     android:layout_marginEnd="16dp"
                     android:layout_marginBottom="16dp"/>

            <TextView
                android:id="@+id/tv_title"
                style="@style/Text_Title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="16dp"
                android:maxLines="2"
                app:layout_constraintBottom_toBottomOf="@id/iv_backdrop"
                app:layout_constraintEnd_toStartOf="@id/fl_vote_container"
                app:layout_constraintStart_toStartOf="parent"
                tools:text="@string/placeholder_title"/>

            <TextView
                android:id="@+id/tv_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/chip_background_colored_light"
                tools:text="@string/placeholder_date"
                android:padding="8dp"
                style="@style/Text_Body2"
                android:textColor="@color/white"
                app:layout_constraintBottom_toTopOf="@id/tv_title"
                app:layout_constraintStart_toStartOf="@id/tv_title"/>

            <ImageView
                android:id="@+id/iv_cover"
                android:layout_width="0dp"
                android:layout_height="260dp"
                app:layout_constraintTop_toBottomOf="@id/iv_backdrop"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/tv_description"
                tools:src="@drawable/ic_photo_96dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="4dp"/>

            <TextView
                android:id="@+id/tv_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@id/iv_cover"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/iv_cover"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="16dp"
                style="@style/Text_Body1"
                tools:text="@string/placeholder_description"/>

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/barrier_genres"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:barrierDirection="bottom"
                app:constraint_referenced_ids="tv_description, iv_cover"
                tools:layout_editor_absoluteY="16dp"/>
            
            <LinearLayout
                android:id="@+id/ll_genresContainer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/barrier_genres"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/genres"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    style="@style/Text_Header6"/>

                <com.google.android.flexbox.FlexboxLayout
                    android:id="@+id/fbl_genres"
                    android:layout_marginTop="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    app:flexWrap="wrap"
                    app:alignItems="stretch"
                    app:alignContent="stretch"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_videosContainer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/ll_genresContainer"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="8dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/videos"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    style="@style/Text_Header6"/>


                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_videos"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"/>


            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</FrameLayout>
